# smolrag

./: .gitignore  README.md  pyproject.toml
Assets/ZTResource/Scripts/AIsearch/: AiSearch.cs  AiSearch.txt
Assets/ZTResource/Scripts/CleanGUIPack/: ButtonSounds.txt  CleanButton.txt  Gradient.txt  Popup.txt
Assets/ZTResource/Scripts/ResourceCard/: CardInfo.cs  CardInfo.txt  ItemDetailsDisplay.cs  ItemDetailsDisplay.txt  ResourceCardData.cs  ResourceCardData.txt  ResourceCardUI.cs  ResourceCardUI.txt  ResourceManager.cs  ResourceManager.txt
Assets/ZTResource/Scripts/ResourceEntry/: ResourceEntryWindow.cs  ResourceEntryWindow.txt  ResourceInfo.cs  ResourceInfo.txt  ResourceInfoEditor.cs  ResourceInfoEditor.txt  ResourceLibraryUpdater.cs  ResourceLibraryUpdater.txt
Assets/ZTResource/Scripts/TagLibrary/: ITagLibrary.cs  ITagLibrary.txt  TagLibrary.cs  TagLibrary.txt  TagLibraryEditor.cs  TagLibraryEditor.txt  TagLibraryManager.cs  TagLibraryManager.txt
Assets/ZTResource/Scripts/UserPurchase/: BatchUI.cs  BatchUI.cs.txt  CSVParser.cs  CSVParser.cs.txt  HistoryCardUI.cs  HistoryCardUI.cs.txt  MainUIController.cs  MainUIController.cs.txt  UserPurchaseManager.cs  UserPurchaseManager.txt
Assets/ZTResource/Scripts/ZT_Tools/: AddResourceInfo.cs  AddResourceInfo.txt  BatchScreenshot.cs  BatchScreenshotEditor.txt  (+16 more)
ZTResource/: kv_store_full_docs.json  kv_store_text_chunks.json  vdb_chunks.json
data/: format.py  zt_resource.csv
smolrag/: __init__.py  base.py  llm.py  operate.py  prompts.py  smolrag.py  storage.py  utils.py
tests/: test_index.py  test_query.py
(+38 files in other folders)
