[project]
name = "smolrag"
version = "0.1.0"
description = ""
authors = [
    {name = "Yimi81",email = "1548222878@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.59.9,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "nano-vectordb (>=0.0.4.3,<0.0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
